# django-template

./: .env.example  CONTRIBUTING.md  Makefile  README.MD  README.customization.md  README.md  main.py  manage.py  pyproject.toml  readme.md  setup.cfg
.github/workflows/: README.md  ci.yml
app/: api.py
app/repositories/: customer_repository.py
app/services/: auth_service.py
config/: settings.py  urls.py
django_template/: settings.py
docker/: build.Dockerfile  test.Dockerfile
scripts/: rename-template.ps1  rename-template.sh
tests/docker/: test_with_curl.ps1  test_with_curl.sh
tests/e2e/: test_api.py
tests/unit/: test_auth_service.py  test_customer_service.py
